[package]
name = "repa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Peak Performance Pattern Seeker"
authors = ["Mark Tyrkba <marktyrkba456@gmail.com>"]
repository = "https://github.com/rakivo/repa"
categories = ["command-line-utilities", "text-processing"]
keywords = ["grep", "pattern-matching", "regex", "hyperscan", "text-processing"]

[features]
default = ["regex"]
regex = ["dep:regex-automata"]
hyperscan = ["dep:hyperscan"]

[dependencies]
flager = "0.0.6"
dir_rec = "0.1.2"
memmap2 = "=0.9.5"
phf = { version = "=0.11.2", features = ["macros"] }
hyperscan = { version = "=0.3.2", features = ["v5_4"], optional = true }
regex-automata = { version = "=0.4.9", default-features = false, features = ["dfa", "syntax"], optional = true }
